<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.upv.dsic.gti-ia</groupId>
	<artifactId>magentix2</artifactId>
	<packaging>jar</packaging>
	<name>magentix2</name>
	<url>http://maven.apache.org</url>
	<contributors>
		<contributor>
			<name>Vicent Botti</name>
			<email>vbotti@dsic.upv.es</email>
			<roles>
				<role>Head</role>
			</roles>
		</contributor>
		<contributor>
			<name>Agustin Espinosa</name>
			<email>aespinosa@dsic.upv.es</email>
			<roles>
				<role>Faculty</role>
			</roles>
		</contributor>
		<contributor>
			<name>Soledad Valero</name>
			<email>svalero@dsic.upv.es</email>
			<roles>
				<role>Faculty</role>
			</roles>
		</contributor>
		<contributor>
			<name>Javi Palanca</name>
			<email>jpalanca@dsic.upv.es</email>
		</contributor>


	</contributors>
	<version>2.1.1</version>
	<description>
		Though many networking protocol needs have been addressed,
		a
		large gap exists in common guaranteed-delivery messaging
		middleware.
		AMQP fills that gap. Advanced Message Queuing
		Protocol, enables
		complete interoperability for messaging
		middleware, both the networking
		protocol and the semantics of
		broker services are defined in AMQP. The
		AMQP model explicitly
		defines the server's semantics because
		interoperability demands
		the same semantics for any server
		implementation. To enable
		technology-neutral interoperability, AMQP
		defines an efficient
		wire-level format with modern features.
	</description>
	<licenses>
		<license>
			<name>GNU Lesser General Public License</name>
			<url>http://www.gnu.org/licenses/lgpl.html</url>
		</license>
	</licenses>
	<organization>
		<name>GTI-IA</name>
		<url>http://users.dsic.upv.es/grupos/ia/ia.html</url>
	</organization>
	<developers>
		<developer>
			<name>Joan Bellver</name>
			<email>jbellver@dsic.upv.es</email>
			<roles>
				<role>Software Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Jaume Jordan</name>
			<email>jjordan@dsic.upv.es</email>
			<roles>
				<role>Software Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Ricard López Fogués</name>
			<email>rilopez@dsic.upv.es</email>
			<roles>
				<role>Software Developer</role>
			</roles>
		</developer>
	</developers>
	<mailingLists>
		<mailingList>
			<name>GTI-IA mailing List</name>
			<post>gti@dsic.upv.es</post>
		</mailingList>
	</mailingLists>
	<scm>
		<developerConnection>
			scm:svm:https://gti-ia.dsic.upv.es/svn/thomas
		</developerConnection>
	</scm>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>1g</maxmemory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<configuration>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>


		</plugins>
	</reporting>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<descriptors>
						<!-- Sitio en el que esta el fichero anterior -->
						<descriptor>src/main/assembly/dep.xml</descriptor>
					</descriptors>
				</configuration>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.12</version>
					</dependency>
				</dependencies>
				<configuration>
					<formats>
						<format>xml</format>
					</formats>
					<argLine>-Xms128M -Xmx6144M -XX:MaxPermSize=512M
						-XX:MaxHeapSize=2048m</argLine><!---XX:PermSize=128M</argLine -->
					<forkMode>pertest</forkMode>
					<!--threadCount>1</threadCount -->
					<runOrder>alphabetical</runOrder>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javacc-maven-plugin</artifactId>
				<version>2.6</version>
				<!-- <executions> <execution> <id>javacc</id> <goals> <goal>javacc</goal> 
					</goals> -->
				<configuration>
					<sourceDirectory>src/main/java/es/upv/dsic/gti_ia/norms
					</sourceDirectory>
					<outputDirectory>src/main/java/</outputDirectory>
				</configuration>
				<!-- </execution> </executions> -->
			</plugin>

		</plugins>
	</build>
	<profiles>
		<profile>
			<id>metric</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>cobertura-maven-plugin</artifactId>
						<version>2.5.1</version>
						<configuration>
							<formats>
								<format>html</format>
								<format>xml</format>
							</formats>
							<argLine>-Xms1000m -Xmx6144m -XX:MaxPermSize=6144m</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.bubbler</groupId>
			<artifactId>serializer</artifactId>
			<version>0.22</version>
		</dependency>
		<dependency>
			<groupId>org.apache.mina</groupId>
			<artifactId>mina-core</artifactId>
			<version>1.0.0</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>java.openjdk</groupId>
			<artifactId>rt</artifactId>
			<version>1.6.0_14</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.2.1</version>
		</dependency>
		
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>jss</artifactId>
			<version>4</version>

		</dependency>

		<dependency>
			<groupId>org.mindswap</groupId>
			<artifactId>owl-s</artifactId>
			<version>1.1.0</version>
		</dependency>
		<!-- Librerias para thomas -->



		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>3.1.14</version>
		</dependency>

		<dependency>
			<groupId>com.hp.hpl.jena</groupId>
			<artifactId>jena</artifactId>
			<version>2.6.4</version>
		</dependency>
		<dependency>
			<groupId>com.hp.hpl.jena</groupId>
			<artifactId>arq</artifactId>
			<version>2.8.7</version>
		</dependency>
		<dependency>
			<groupId>com.hp.hpl.jena</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>pellet</groupId>
			<artifactId>pellet</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>pellet</groupId>
			<artifactId>aterm-java</artifactId>
			<version>1.6</version>
		</dependency>


		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu_base</artifactId>
			<version>3.4.3</version>
		</dependency>

		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu4j</artifactId>
			<version>4.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-jci-core</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>axis</groupId>
			<artifactId>axis</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>javax.jms</groupId>
			<artifactId>jms</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2</version>
		</dependency>

		<!--dependency> <groupId>org.apache</groupId> <artifactId>qpid-client-seguridad</artifactId> 
			<version>0.7</version> <scope>compile</scope> </dependency> <dependency> 
			<groupId>org.apache</groupId> <artifactId>qpid-common-seguridad</artifactId> 
			<version>0.7</version> </dependency -->

		<dependency>
			<groupId>org.apache</groupId>
			<artifactId>qpid-client</artifactId>
			<version>0.20</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache</groupId>
			<artifactId>qpid-common</artifactId>
			<version>0.10</version>
		</dependency>


		<dependency>
			<groupId>org.apache.rampart</groupId>
			<artifactId>rampart-core</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.rampart</groupId>
			<artifactId>rampart-policy</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.rampart</groupId>
			<artifactId>rampart-trust</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>jason</groupId>
			<artifactId>jason</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.2.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.2</version>
		</dependency>
		<dependency>
			<groupId>jettison</groupId>
			<artifactId>jettison</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>codehaus</groupId>
			<artifactId>stax</artifactId>
			<version>1.2.0</version>
		</dependency>
	</dependencies>



	<repositories>
		<repository>
			<id>GTI</id>
			<url>http://gti-ia.dsic.upv.es:8081/artifactory/remote-repos/</url>
		</repository>
	</repositories>

	<properties>
		<cobertura.maxmem>8292M</cobertura.maxmem>
		<maven.cobertura.instrumentation.maxmemory>8192M
		</maven.cobertura.instrumentation.maxmemory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compile.encoding>UTF-8</maven.compile.encoding>
		<maven.compile.fork>true</maven.compile.fork>
	</properties>

</project>
